feat: 支持路由替换并统一活动视图
